...
    <TextView
        android:id="@+id/tv_overview_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_poster_movie_list"
        app:layout_constraintTop_toBottomOf="@id/tv_date_movie"
        tools:text="After fighting his demons for decades, John Rambo now lives in peace on his family ranch in Arizona, but his rest is interrupted when Gabriela, the granddaughter of his housekeeper María, disappears after crossing the border into Mexico to meet her biological father. Rambo, who has become a true father figure for Gabriela over the years, undertakes a desperate and dangerous jou

    <com.google.android.material.button.MaterialButton
...
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/title_favorite"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@drawable/ic_favorite_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_share"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/img_poster_movie_list"
        app:layout_constraintStart_toStartOf="@+id/tv_overview_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_overview_movie" />

...
